fix: 코드리뷰 수정